[gd_scene load_steps=3 format=3 uid="uid://c72k2xu2ggenm"]

[ext_resource type="FontFile" uid="uid://0hn4u6wn6lld" path="res://Fonts/ThaleahFat.ttf" id="1_emv3i"]
[ext_resource type="Script" uid="uid://c6qpmen627cg6" path="res://Scenes/pause_menu.gd" id="1_k0w1u"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 2
script = ExtResource("1_k0w1u")

[node name="CenterContainer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="CenterContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -554.0
offset_top = -301.0
offset_right = 563.0
offset_bottom = 309.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 319.0
offset_top = 160.0
offset_right = -285.0
offset_bottom = -125.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 7
alignment = 1

[node name="ResumeButton" type="Button" parent="CenterContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_emv3i")
theme_override_font_sizes/font_size = 32
text = "Resume"

[node name="OptionsButton" type="Button" parent="CenterContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_emv3i")
theme_override_font_sizes/font_size = 32
text = "Options"

[node name="MainMenuButton" type="Button" parent="CenterContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_emv3i")
theme_override_font_sizes/font_size = 32
text = "Exit"

[node name="TitleLabel" type="Label" parent="CenterContainer/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -300.5
offset_top = 48.0
offset_right = 312.5
offset_bottom = 87.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_emv3i")
theme_override_font_sizes/font_size = 42
text = "Pause Game"
horizontal_alignment = 1
